[package]
name = "wsdl-rs"
version = "0.1.0"
authors = ["Jakko Sikkar <jakko.sikkar@gmail.com>",
           "Janno Põldma <janno.poldma@gmail.com>"]

[lib]
name = "wsdl"

[dependencies]
hyper = "0.10.10"
xml-rs = "0.4.1"
encoding = "0.2.33"
error-chain = "0.10.0"
clippy = {version = "*", optional = true}

[dependencies.xsd-rs]
path = "../xsd"

[features]
default = []

[[example]]
name = "read-wsdl"
