[package]
name = "wsdl-rs"
version = "0.1.0"
authors = ["Jakko Sikkar <jakko.sikkar@gmail.com>",
           "Janno Põldma <janno.poldma@gmail.com>"]

[lib]
name = "wsdl"

[dependencies]
hyper = "*"
xml-rs = "*"
encoding = "*"
error-chain = "*"
tokio-core = "*"
futures = "*"
clippy = {version = "*", optional = true}

[dependencies.xsd-rs]
path = "../xsd"

[features]
default = []

[[example]]
name = "read-wsdl"
